<resources>
    <string name="app_name">Quiz Daring - Lingga Kusuma Sakti</string>
    <string name="welcome_n_back">Welcome \n Back</string>
    <string name="add_your_activities">Add Your Activities</string>
    <string name="what_courses">What courses?</string>
    <string name="enter_your_courses">Enter your courses</string>
    <string name="who_the_lecturer">Who the lecturer?</string>
    <string name="enter_your_lecturer">Enter your lecturer</string>
    <string name="what_date">What date?</string>
    <string name="enter_date">Enter date</string>
    <string name="if_you_have_notes_write_it">If you have notes, write it!</string>
    <string name="enter_your_notes">Enter your notes</string>
    <string name="save">Save</string>
    <string name="find_your_activities_here">Find your activities here</string>
    <string name="delete">Delete</string>
    <string name="update_activities">Update Activities</string>
</resources>
